--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Pointless Cube</title>
-		<style>
+		<!-- <style>
 			body { margin: 0; }
-		</style>
+		</style> -->
 	</head>
 	<body>
+		<div id="container"></div>
 		<script src="three.js"></script>
 		<script src="main.js"></script>
 	</body>
